# adversarial-curriculum-offline-rl-with-uncertainty-weighted-conservative-learning

./: .gitignore  CHECKLIST.md  DELIVERY_SUMMARY.md  FINAL_CHECKLIST.md  FIXES_APPLIED.md  IMPROVEMENTS.md  INSTALLATION.md  PROJECT_IMPROVEMENTS.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: final_results.json  results.json
scripts/: evaluate.py  predict.py  train.py  verify_setup.py
src/adversarial_curriculum_offline_rl_with_uncertainty_weighted_conservative_learning/: __init__.py
src/adversarial_curriculum_offline_rl_with_uncertainty_weighted_conservative_learning/evaluation/: __init__.py  analysis.py  metrics.py
src/adversarial_curriculum_offline_rl_with_uncertainty_weighted_conservative_learning/training/: __init__.py  trainer.py
src/adversarial_curriculum_offline_rl_with_uncertainty_weighted_conservative_learning/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
